backend/deployment/business-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bc94-business-service
  labels:
    app: bc94-business
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: bc94-business
    
  template:
    metadata:
      name: bc94-business
      labels:
        app: bc94-business
    spec:
      containers:
        - name: bc94-business-service
          image: ghcr.io/himanshukapoor328/bc94-business-service:123
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
      imagePullSecrets: 
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: bc94-business-service
  labels:
    app: bc94-business
spec:
  type: ClusterIP
  ports:
  - port: 8083
    targetPort: 8083
  selector:
    app: bc94-business
