backend/deployment/service-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bc94-service-registry
  labels:
    app: bc94-sg
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: bc94-sg
    
  template:
    metadata:
      name: bc94-sg
      labels:
        app: bc94-sg
    spec:
      containers:
        - name: bc94-service-registry
          image: ghcr.io/himanshukapoor328/bc94-service-registry:123
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
      
      imagePullSecrets: 
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: bc94-service-registry
  labels:
    app: bc94-sg
spec:
  type: ClusterIP
  ports:
  - port: 8761
    targetPort: 8761
  selector:
    app: bc94-sg
