backend/deployment/transaction-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bc94-transaction-service
  labels:
    app: bc94-transaction
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: bc94-transaction
    
  template:
    metadata:
      name: bc94-transaction
      labels:
        app: bc94-transaction
    spec:
      containers:
        - name: bc94-transaction-service
          image: ghcr.io/himanshukapoor328/bc94-transaction-service:123
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
      imagePullSecrets: 
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: bc94-transaction-service
  labels:
    app: bc94-transaction
spec:
  type: ClusterIP
  ports:
  - port: 8082
    targetPort: 8082
  selector:
    app: bc94-transaction
