backend/deployment/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bc94-user-service
  labels:
    app: bc94-user-service
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: bc94-user-service
    
  template:
    metadata:
      name: bc94-user-service
      labels:
        app: bc94-user-service
    spec:
      containers:
        - name: bc94-user-service
          image: ghcr.io/himanshukapoor328/bc94-user-service:123
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
      imagePullSecrets: 
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: bc94-user-service
  labels:
    app: bc94-user-service
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: bc94-user-service
