backend/deployment/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bc94-ingress-api
  labels:
    name:  bc94-ingress-api
  # annotations:
  #   ingress.kubernetes.io/rewrite-target: / 
spec:
  ingressClassName: nginx
  rules:
  - host: bc94api.zemoso.tk
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service: 
            name: bc94-api-gateway
            port:
              number: 9091
      # - pathType: Prefix
      #   path: /user/
      #   backend:
      #     service:
      #       name: bc94-user-service
      #       port:
      #         number: 8081
      # - pathType: Prefix
      #   path: /transaction/
      #   backend:
      #     service:
      #       name: bc94-transaction-service
      #       port:
      #         number: 8082
      # - pathType: Prefix
      #   path: /business/
      #   backend:
      #     service:
      #       name: bc94-business-service
      #       port:
      #         number: 8083
