backend/deployment/service-registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bc94-ingress-svc
  labels:
    name:  bc94-ingress-svc
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: bc94service-registry.zemoso.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: bc94-service-registry
            port:
              number: 8761
